dataset1235/2025-2/805158916/users/3563627350/executions/1584167357_2826299531.log
== SUBMISSION (2025-08-27 14:38:44)
-- CODE: 
valor_compra = float(input("valo da Compra; "))
valor_pago = float(input("valor pago"))
troco = valor_pago - valorcompra
print(troco)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.0
10.0
---- correct output:
0.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    troco = valor_pago - valorcompra
                         ^^^^^^^^^^^
NameError: name 'valorcompra' is not defined. Did you mean: 'valor_compra'?
-- TEST CASE 2:
---- input:
97.25
100.0
---- correct output:
2.75
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    troco = valor_pago - valorcompra
                         ^^^^^^^^^^^
NameError: name 'valorcompra' is not defined. Did you mean: 'valor_compra'?
-- TEST CASE 3:
---- input:
32.0
50.0
---- correct output:
18.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    troco = valor_pago - valorcompra
                         ^^^^^^^^^^^
NameError: name 'valorcompra' is not defined. Did you mean: 'valor_compra'?
-- TEST CASE 4:
---- input:
181.0
200.0
---- correct output:
19.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    troco = valor_pago - valorcompra
                         ^^^^^^^^^^^
NameError: name 'valorcompra' is not defined. Did you mean: 'valor_compra'?
-- TEST CASE 5:
---- input:
1.25
5.0
---- correct output:
3.75
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    troco = valor_pago - valorcompra
                         ^^^^^^^^^^^
NameError: name 'valorcompra' is not defined. Did you mean: 'valor_compra'?
-- TEST CASE 6:
---- input:
48.0
100.0

---- correct output:
52.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    troco = valor_pago - valorcompra
                         ^^^^^^^^^^^
NameError: name 'valorcompra' is not defined. Did you mean: 'valor_compra'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:38:18)
-- CODE: 
valor_compra = float(input("Valo da Compra; "))
valor_pago = float(input("Valor pago"))
troco = valor_pago - valorcompra
print(troco)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.0
10.0
---- correct output:
0.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    troco = valor_pago - valorcompra
                         ^^^^^^^^^^^
NameError: name 'valorcompra' is not defined. Did you mean: 'valor_compra'?
-- TEST CASE 2:
---- input:
97.25
100.0
---- correct output:
2.75
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    troco = valor_pago - valorcompra
                         ^^^^^^^^^^^
NameError: name 'valorcompra' is not defined. Did you mean: 'valor_compra'?
-- TEST CASE 3:
---- input:
32.0
50.0
---- correct output:
18.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    troco = valor_pago - valorcompra
                         ^^^^^^^^^^^
NameError: name 'valorcompra' is not defined. Did you mean: 'valor_compra'?
-- TEST CASE 4:
---- input:
181.0
200.0
---- correct output:
19.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    troco = valor_pago - valorcompra
                         ^^^^^^^^^^^
NameError: name 'valorcompra' is not defined. Did you mean: 'valor_compra'?
-- TEST CASE 5:
---- input:
1.25
5.0
---- correct output:
3.75
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    troco = valor_pago - valorcompra
                         ^^^^^^^^^^^
NameError: name 'valorcompra' is not defined. Did you mean: 'valor_compra'?
-- TEST CASE 6:
---- input:
48.0
100.0

---- correct output:
52.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    troco = valor_pago - valorcompra
                         ^^^^^^^^^^^
NameError: name 'valorcompra' is not defined. Did you mean: 'valor_compra'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:39:36)
-- CODE: 
valor_compra = float(input("valor_compra; "))
valor_pago = float(input("valor pago; "))
troco = (valor_pago - valor_compra)
print(troco)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10.0
10.0
---- correct output:
0.0
---- user output:
valor_compra; valor pago; 0.0
-- TEST CASE 2:
---- input:
97.25
100.0
---- correct output:
2.75
---- user output:
valor_compra; valor pago; 2.75
-- TEST CASE 3:
---- input:
32.0
50.0
---- correct output:
18.0
---- user output:
valor_compra; valor pago; 18.0
-- TEST CASE 4:
---- input:
181.0
200.0
---- correct output:
19.0
---- user output:
valor_compra; valor pago; 19.0
-- TEST CASE 5:
---- input:
1.25
5.0
---- correct output:
3.75
---- user output:
valor_compra; valor pago; 3.75
-- TEST CASE 6:
---- input:
48.0
100.0

---- correct output:
52.0
---- user output:
valor_compra; valor pago; 52.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:39:00)
-- CODE: 
valor_compra = float(input("valo_compra; "))
valor_pago = float(input("valor pago"))
troco = valor_pago - valorcompra
print(troco)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.0
10.0
---- correct output:
0.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    troco = valor_pago - valorcompra
                         ^^^^^^^^^^^
NameError: name 'valorcompra' is not defined. Did you mean: 'valor_compra'?
-- TEST CASE 2:
---- input:
97.25
100.0
---- correct output:
2.75
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    troco = valor_pago - valorcompra
                         ^^^^^^^^^^^
NameError: name 'valorcompra' is not defined. Did you mean: 'valor_compra'?
-- TEST CASE 3:
---- input:
32.0
50.0
---- correct output:
18.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    troco = valor_pago - valorcompra
                         ^^^^^^^^^^^
NameError: name 'valorcompra' is not defined. Did you mean: 'valor_compra'?
-- TEST CASE 4:
---- input:
181.0
200.0
---- correct output:
19.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    troco = valor_pago - valorcompra
                         ^^^^^^^^^^^
NameError: name 'valorcompra' is not defined. Did you mean: 'valor_compra'?
-- TEST CASE 5:
---- input:
1.25
5.0
---- correct output:
3.75
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    troco = valor_pago - valorcompra
                         ^^^^^^^^^^^
NameError: name 'valorcompra' is not defined. Did you mean: 'valor_compra'?
-- TEST CASE 6:
---- input:
48.0
100.0

---- correct output:
52.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    troco = valor_pago - valorcompra
                         ^^^^^^^^^^^
NameError: name 'valorcompra' is not defined. Did you mean: 'valor_compra'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:39:09)
-- CODE: 
valor_compra = float(input("valo_compra; "))
valor_pago = float(input("valor pago; "))
troco = valor_pago - valorcompra
print(troco)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.0
10.0
---- correct output:
0.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    troco = valor_pago - valorcompra
                         ^^^^^^^^^^^
NameError: name 'valorcompra' is not defined. Did you mean: 'valor_compra'?
-- TEST CASE 2:
---- input:
97.25
100.0
---- correct output:
2.75
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    troco = valor_pago - valorcompra
                         ^^^^^^^^^^^
NameError: name 'valorcompra' is not defined. Did you mean: 'valor_compra'?
-- TEST CASE 3:
---- input:
32.0
50.0
---- correct output:
18.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    troco = valor_pago - valorcompra
                         ^^^^^^^^^^^
NameError: name 'valorcompra' is not defined. Did you mean: 'valor_compra'?
-- TEST CASE 4:
---- input:
181.0
200.0
---- correct output:
19.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    troco = valor_pago - valorcompra
                         ^^^^^^^^^^^
NameError: name 'valorcompra' is not defined. Did you mean: 'valor_compra'?
-- TEST CASE 5:
---- input:
1.25
5.0
---- correct output:
3.75
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    troco = valor_pago - valorcompra
                         ^^^^^^^^^^^
NameError: name 'valorcompra' is not defined. Did you mean: 'valor_compra'?
-- TEST CASE 6:
---- input:
48.0
100.0

---- correct output:
52.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    troco = valor_pago - valorcompra
                         ^^^^^^^^^^^
NameError: name 'valorcompra' is not defined. Did you mean: 'valor_compra'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
